SERVER-13413 profiling should not do version checks against op namespace (cherry picked from commit 7ccb298ff2790f4d4b5e844e4124f9051a4ec437)